# opengotchi

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  start-opengotchi.bat  vite.config.ts
docs/: architecture.md  ipc-contract.md  save-schema.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  mod.rs  pet.rs  settings.rs
src-tauri/src/models/: mod.rs  notification.rs  pet.rs  settings.rs
src-tauri/src/services/: mod.rs  notifications.rs  persistence.rs  settings.rs  tray.rs  window.rs
src/app/: App.tsx  styles.css
src/features/pet/: model.test.ts  model.ts
src/features/pet/components/: PetControls.tsx  PetNurseryPanel.tsx  PetStatusPanel.tsx  TamagotchiDevice.tsx  deviceUi.test.ts  deviceUi.ts
src/features/pet/simulation/: petSimulation.test.ts  petSimulation.ts  petSimulationConfig.test.ts  petSimulationConfig.ts
src/features/pet/store/: petStore.integration.test.ts  petStore.ts
src/features/settings/: model.test.ts  model.ts
src/features/settings/store/: settingsStore.integration.test.ts  settingsStore.ts
src/features/system/: notificationModel.ts  reminderSync.test.ts  reminderSync.ts  tauriEvents.test.ts  tauriEvents.ts
src/features/system/components/: DevToolsPanel.tsx  SystemPanel.tsx
src/lib/tauri/: appCommands.ts  petCommands.ts  settingsCommands.ts
