[package]
name = "opengotchi"
version = "0.1.0"
description = "OpenGotchi desktop shell"
edition = "2021"

[lib]
name = "opengotchi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
